...
    <string name="create">Erfassen</string>
    <string name="create_drug">Medikament erfassen</string>
    <string name="add">Bestand hinzufügen</string>
    <string name="add_drug">Bestand hinzufügen</string>
    <string name="remove">Bestand entfernen</string>
    <string name="remove_drug">Bestand entfernen</string>
    <string name="edit">Medikament bearbeiten</string>
    <string name="edit_drug">Medikament bearbeiten</string>
    <string name="delete">Medikament löschen</string>
    <string name="delete_drug">%s löschen?</string>
    <string name="menu_management">Verwaltung</string>
    <string name="menu_dispensary">Abgabe</string>
    <string name="drugs">Medikamente</string>
    <string name="inventory">Inventar</string>
    <string name="signatures">Signaturen</string>
    <string name="history">Abgaben</string>
    <string name="search_hint">Medikament suchen</string>
    <string name="sign">Signieren</string>
    <string name="employee">Fachkraft</string>
    <string name="patient">Patient</string>
...
    <string name="added_to_favorites">Zu Favoriten hinzugefügt</string>
    <string name="removed_from_favorites">Von Favoriten entfernt</string>
    <string name="not_enough_stock_amount">Zu wenig an Lager</string>
    <string name="dosage">Dosierung</string>
    <string name="error_dispense_drug">Beim Ausgeben trat ein Fehler auf</string>
    <string name="close">Schliessen</string>
    <string name="error_name_required">Bitte Name eingeben</string>
    <string name="error_dosage_required">Bitte Dosierung eingeben</string>
    <string name="error_employee_required">Bitte Fachkraft eingeben</string>
    <string name="error_patient_required">Bitte Patient eingeben</string>
    <string name="error_amount_over_zero_required">Bitte Anzahl grösser als 0 eingeben</string>
    <string name="error_create_drug">Beim Erstellen trat ein Fehler auf</string>
    <string name="drug_not_found">Medikament wurde nicht gefunden</string>
    <string name="error_update_drug_amount">Fehler beim aktualisieren des Bestandes</string>
    <string name="remaining">Noch</string>
...
    <string name="drug_amount_and_unit">%1$.2f %2$s</string>
    <string name="actual_vs_expected_units">%1$.2f / %2$.2f %3$s</string>
    <string name="stock">Aktueller Bestand</string>
    <string name="add_to_stock">Zu Bestand hinzufügen</string>
    <string name="remove_from_stock">Von Bestand entfernen</string>
    <string name="substance">Substanz</string>
    <string name="error_substance_required">Bitte Substanz eingeben</string>
    <string name="error_toggle_favorite">Fehler beim Favorit setzen</string>
    <string name="signature_success">Erfolgreich signiert</string>
    <string name="checkall">Check all</string>
    <string name="import_title">IMPORT</string>
    <string name="export_title">EXPORT</string>
    <string name="error_update_drug">Fehler beim Aktualisieren</string>
...
