<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/drug_item_add"
        android:title="@string/add" />
    <item
        android:id="@+id/drug_item_remove"
        android:title="@string/remove" />
    <item
        android:id="@+id/drug_item_edit"
        android:title="@string/edit" />
    <item
        android:id="@+id/drug_item_delete"
        android:title="@string/delete" />
</menu>